# FlowiseAI-MCP

./: .dockerignore  .gitignore  CLEANUP_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_FIX.md  Dockerfile  FIX_INSTRUCTIONS.md  LICENSE  MCP_COMPLIANCE_REPORT.md  QUICKSTART.md  README.md  SMITHERY_DEPLOYMENT.md  TOOLS_REFERENCE.md  claude_desktop_config.json  claude_desktop_config.json.example  flowiseai-mcp-checklist.md  pyproject.toml  requirements.txt  smithery.json  smithery.yaml  test_docker_build.sh  test_mcp.py  test_server.py  test_uvx.sh  test_uvx_local.sh  verify_coverage.py  verify_smithery_ready.sh
flowiseai_mcp/: __init__.py  __main__.py  client.py  http_server.py  server.py
src/flowiseai_mcp/: __main__.py  models.py  server.py
