[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flowiseai-mcp"
version = "1.0.0"
description = "A comprehensive MCP server for FlowiseAI with full API coverage"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "FlowiseAI MCP", email = "contact@example.com" },
]
keywords = ["mcp", "flowiseai", "ai", "automation", "chatflow", "agentflow"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.0.0",
    "typing-extensions>=4.0.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
flowiseai-mcp = "flowiseai_mcp.server:main"
flowiseai-mcp-http = "flowiseai_mcp.http_server:main"

[tool.setuptools]
packages = ["flowiseai_mcp"]